--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
     <script>
         // CONFIGURATION - Replace these with your actual image URLs
         const pageImages = [
-            '', // Page 1 - Add your image URL here
-            '', // Page 2 - Add your image URL here
-            '', // Page 3 - Add your image URL here
-            '', // Page 4 - Add your image URL here
+            'https://dj-diu.github.io/invitation/Cover.jpg', // Page 1 - Add your image URL here
+            'https://dj-diu.github.io/invitation/invite.png', // Page 2 - Add your image URL here
+            'https://dj-diu.github.io/invitation/address.png', // Page 3 - Add your image URL here
+            'https://dj-diu.github.io/invitation/guest.png', // Page 4 - Add your image URL here
             // Add more pages as needed
         ];
 
