--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             font-size: 20px;
             font-weight: bold;
             background: rgba(255,255,255,0.1);
+            color: rgba(51, 51, 51, 1);
             /* letter-spacing: 2px; */
         }
 
