--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             font-weight: bold;
             background: rgba(255,255,255,0.1);
             color: rgba(137, 14, 2)
+            color: rgba(212, 175, 55, 0.95);
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.4);
+            
             /* letter-spacing: 2px; */
         }
 
