--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
             
             /* letter-spacing: 2px; */
         }
+        .recipient-name {
+  color: rgba(47, 79, 79, 0.95); /* dark slate gray */
+  backdrop-filter: blur(3px);
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.3);
+        }
+        
 
         .recipient-name .label {
             font-size: 18px;
