--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
-            background-image: url('https://dj-diu.github.io/invitation/bg.jpg');
+            background-image: url('https://dj-diu.github.io/invitation/bg2.jpeg');
             /* background-size: cover;
             background-position: center;
             background-repeat: no-repeat; */
@@ -40,13 +40,24 @@
             padding: 15px;
             background: rgba(255,255,255,0.1);
             border-radius: 10px;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(1px);
             text-align: center;
             color: white;
             font-size: 20px;
             font-weight: bold;
             background: rgba(255,255,255,0.1);
+            color: rgba(137, 14, 2);
+            color: rgba(212, 175, 55, 0.95);
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.4);
+            
             /* letter-spacing: 2px; */
+        }
+        .recipient-name {
+            color: rgba(47, 79, 79, 0.95); /* dark slate gray */
+            backdrop-filter: blur(3px);
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.3);
         }
 
         .recipient-name .label {
