--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
             if(mul === 'y') {
                 document.getElementById('guestNamePrati').innerHTML="मूळ पत्रिका"          }
         }
+        getMul()
 
         // Set guest name
         document.getElementById('guestName').textContent = getGuestName();
