--- a/link.html
+++ b/link.html
@@ -221,11 +221,11 @@
             <label>मूळ पत्रिका:</label>
             <div class="radio-group">
                 <div class="radio-option">
-                    <input type="radio" id="m-p-n" name="m-p" value="n" >
+                    <input type="radio" id="m-p-n" name="m-p" value="n" checked>
                     <label for="m-p-n">No</label>
                 </div>
                 <div class="radio-option">
-                    <input type="radio" id="m-p-y" name="m-p" value="y" checked>
+                    <input type="radio" id="m-p-y" name="m-p" value="y">
                     <label for="m-p-y">Yes</label>
                 </div>
             </div>
@@ -435,4 +435,5 @@
     </script>
 </body>
 </html>
+
 
