--- a/link.html
+++ b/link.html
@@ -247,16 +247,23 @@
 
         <div class="section">
             <label>WhatsApp Message Template (Marathi):</label>
-            <textarea id="messageTemplate">नमस्कार {NAME},
+            <textarea id="messageTemplate">
+                *🌸 आग्रहाचं निमंत्रण 🌸*
 
-तुम्हाला आमच्या विशेष कार्यक्रमासाठी आमंत्रित करण्यात आम्हाला आनंद होत आहे! 🎉
+प्रिय {NAME},
+आपल्या प्रेम व आशीर्वादामुळे आमच्या आयुष्यात एक आनंदाचा शुभ प्रसंग आला आहे.
+आमच्या परिवारातील या मंगल प्रसंगासाठी हे निमंत्रण आपणांस मनःपूर्वक पाठवत आहोत. 🌺
 
-कृपया तुमचे वैयक्तिक आमंत्रण पहा:
-{URL}
+वेळेअभावी प्रत्यक्ष येऊन आमंत्रण देणे शक्य झाले नाही, म्हणून हे आमंत्रण ऑनलाइन पाठवत आहोत.
+कृपया यालाच आमचा *मनःपूर्वक आग्रहाचा निमंत्रण समजून* स्वीकारा आणि
+**नवदांपत्याला आपल्या आशीर्वादाने नक्की गौरवावे**, ही नम्र विनंती. 🙏🏻
 
-तुमची उपस्थिती आमच्यासाठी खूप महत्वाची आहे.
+📜 आमंत्रण पाहण्यासाठी येथे क्लिक करा:
+🔗 {URL}
 
-धन्यवाद! 🙏</textarea>
+आपला,
+*गडाख परिवार*
+            </textarea>
             <p class="example">Use {NAME} for guest name and {URL} for the link</p>
         </div>
 
@@ -435,5 +442,6 @@
     </script>
 </body>
 </html>
+
 
 
