--- a/link.html
+++ b/link.html
@@ -252,14 +252,14 @@
 
 नमस्कार {NAME},
 आपल्या प्रेम व आशीर्वादामुळे आमच्या आयुष्यात एक आनंदाचा शुभ प्रसंग आला आहे.
-आमच्या परिवारातील या मंगल प्रसंगासाठी हे निमंत्रण आपणांस मनःपूर्वक पाठवत आहोत. 🌺
+आमच्या परिवारातील या मंगल प्रसंगासाठी हे निमंत्रण आपणांस मनःपूर्वक पाठवत आहोत. 🌺😇
 
 वेळेअभावी प्रत्यक्ष येऊन आमंत्रण देणे शक्य झाले नाही, म्हणून हे आमंत्रण ऑनलाइन पाठवत आहोत.
 कृपया यालाच आमचा *मनःपूर्वक आग्रहाचा निमंत्रण समजून* स्वीकारा आणि
 **नवदांपत्याला आपल्या आशीर्वादाने नक्की गौरवावे**, ही नम्र विनंती. 🙏🏻
 
-📜 आमंत्रण पाहण्यासाठी येथे क्लिक करा:
-🔗 {URL}
+ ✉आमंत्रण पाहण्यासाठी येथे क्लिक करा: 🔗
+ {URL}
 
 आपला,
 *गडाख परिवार*
@@ -442,6 +442,7 @@
     </script>
 </body>
 </html>
+
 
 
 
