--- a/index.html
+++ b/index.html
@@ -1,344 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Invitation URL Generator</title>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        min-height: 100vh;
-        padding: 40px 20px;
-    }
-
-    .container {
-        max-width: 900px;
-        margin: 0 auto;
-        background: white;
-        border-radius: 15px;
-        padding: 40px;
-        box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-    }
-
-    h1 {
-        color: #333;
-        margin-bottom: 10px;
-    }
-
-    .subtitle {
-        color: #666;
-        margin-bottom: 30px;
-    }
-
-    .section {
-        margin-bottom: 30px;
-    }
-
-    label {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 8px;
-        color: #333;
-    }
-
-    input, textarea {
-        width: 100%;
-        padding: 12px;
-        border: 2px solid #ddd;
-        border-radius: 8px;
-        font-size: 16px;
-        transition: border 0.3s;
-    }
-
-    input:focus, textarea:focus {
-        outline: none;
-        border-color: #667eea;
-    }
-
-    textarea {
-        min-height: 150px;
-        font-family: inherit;
-        resize: vertical;
-    }
-
-    button {
-        background: #667eea;
-        color: white;
-        border: none;
-        padding: 15px 30px;
-        border-radius: 8px;
-        font-size: 16px;
-        font-weight: bold;
-        cursor: pointer;
-        transition: all 0.3s;
-    }
-
-    button:hover {
-        background: #5568d3;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(102,126,234,0.4);
-    }
-
-    .results {
-        margin-top: 30px;
-        padding: 20px;
-        background: #f8f9fa;
-        border-radius: 8px;
-        display: none;
-    }
-
-    .results.show {
-        display: block;
-    }
-
-    .result-item {
-        background: white;
-        padding: 15px;
-        margin-bottom: 15px;
-        border-radius: 8px;
-        border-left: 4px solid #667eea;
-    }
-
-    .result-item h3 {
-        color: #667eea;
-        margin-bottom: 10px;
-    }
-
-    .copy-btn {
-        background: #4ecdc4;
-        padding: 8px 16px;
-        font-size: 14px;
-        margin-top: 10px;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-    }
-
-    .copy-btn:hover {
-        background: #45b7af;
-    }
-
-    .info-box {
-        background: #fff3cd;
-        border-left: 4px solid #ffc107;
-        padding: 15px;
-        margin-bottom: 20px;
-        border-radius: 5px;
-    }
-
-    .radio-group {
-        display: flex;
-        gap: 20px;
-        margin-top: 10px;
-    }
-
-    .radio-option {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-    }
-
-    .radio-option input[type="radio"] {
-        width: auto;
-        margin: 0;
-        cursor: pointer;
-    }
-
-    .radio-option label {
-        margin: 0;
-        font-weight: normal;
-        cursor: pointer;
-    }
-
-    .example {
-        color: #666;
-        font-size: 14px;
-        margin-top: 5px;
-        font-style: italic;
-    }
-</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Invitation PDF</title>
+  <style>
+    html, body { height: 100%; margin: 0; }
+    iframe { width: 100%; height: 100%; border: none; }
+  </style>
 </head>
-
 <body>
-<div class="container">
-    <h1>🎊 Invitation URL Generator</h1>
-    <p class="subtitle">Create personalized invitation links for your guests</p>
-
-    <div class="info-box">
-        <strong>📝 Instructions:</strong>
-        <ol style="margin-left: 20px; margin-top: 10px;">
-            <li>Enter your hosted invitation URL (GitHub/Netlify)</li>
-            <li>Paste guest names (one per line)</li>
-            <li>Customize the Marathi WhatsApp message</li>
-            <li>Generate and copy links for each guest!</li>
-        </ol>
-    </div>
-
-    <div class="section">
-        <label>Your Invitation URL:</label>
-        <input type="text" id="baseUrl" value="https://dj-diu.github.io/invitation/">
-        <p class="example">Example: https://yourusername.github.io/invitation/index.html</p>
-    </div>
-
-    <div class="section">
-        <label>Event Selection:</label>
-        <div class="radio-group">
-            <div class="radio-option">
-                <input type="radio" id="eventAll" name="eventType" value="all">
-                <label for="eventAll">All events</label>
-            </div>
-            <div class="radio-option">
-                <input type="radio" id="eventWR" name="eventType" value="wr" checked>
-                <label for="eventWR">Only wedding/Reception</label>
-            </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <label>मूळ पत्रिका:</label>
-        <div class="radio-group">
-            <div class="radio-option">
-                <input type="radio" id="m-p-n" name="m-p" value="n" checked>
-                <label for="m-p-n">No</label>
-            </div>
-            <div class="radio-option">
-                <input type="radio" id="m-p-y" name="m-p" value="y">
-                <label for="m-p-y">Yes</label>
-            </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <label>Guest Names (in English):</label>
-        <textarea id="guestNamesEnglish" placeholder="Dhananjay Gadakh"></textarea>
-    </div>
-
-    <button style="width: 40%;" onclick="generateNameEnglish()">Translate to Marathi</button>
-
-    <div class="section">
-        <label>Guest Names (in Marathi):</label>
-        <textarea id="guestNames" placeholder="राज कुमार"></textarea>
-        Click here for <a href="https://marathi.indiatyping.com/" target="_blank">More Clear Translation</a>
-    </div>
-
-    <div class="section">
-        <label>WhatsApp Message Template (Marathi):</label>
-        <textarea id="messageTemplate">
-🌸 *आग्रहाचं निमंत्रण* 🌸
-
-नमस्कार {NAME}, आपल्या प्रेम व आशीर्वादामुळे आमच्या आयुष्यात एक आनंदाचा शुभ प्रसंग आला आहे. आमच्या परिवारातील या मंगल प्रसंगासाठी हे निमंत्रण आपणांस मनःपूर्वक पाठवत आहोत. 🌺
-
-वेळेअभावी प्रत्यक्ष येऊन आमंत्रण देणे शक्य झाले नाही, म्हणून हे आमंत्रण ऑनलाइन पाठवत आहोत. कृपया यालाच आमचा *मनःपूर्वक आग्रहाचा निमंत्रण समजून* स्वीकारा आणि *नवदांपत्याला आपल्या आशीर्वादाने नक्की गौरवावे*, ही नम्र विनंती. 🙏🏻
-
-🌹 *चि. धनंजय*  *चि.सौ.का. दर्शना* 🌹  
-◆|| *यांचा शुभमंगल विवाह* ||◆
-
-विवाह मिती मार्गशीर्ष शु. २ शके १९४७ शनिवार दि. २२/११/२०२५ रोजी सायं. ४.५६ वा. शुभमुहूर्तावर करण्याचे योजिले आहे. तरी आपण सहकुटुंब उपस्थित राहून नवदांपत्यास शुभाशिर्वाद द्यावेत, हीच नम्र विनंती गडाख परिवाराची. 🙏🏻
-
-निमंत्रक :- सौ. लता व श्री. संपत स. प. गडाख  
-समस्त गडाख पाटील परिवार व आप्तेष्ट  
-
-विवाह स्थळ :- देशस्थ मराठा भवन, मराठा बँक्वेट, पहिला मजला, सेक्टर-८, सानपाडा, नवी मुंबई
-
-✉️ आमंत्रण पाहण्यासाठी येथे क्लिक करा 🔗 {URL}
-
-आपला,  
-*गडाख परिवार*
-        </textarea>
-        <p class="example">Use {NAME} for guest name and {URL} for the link</p>
-    </div>
-
-    <button onclick="generateLinks()">Generate Links</button>
-
-    <div class="results" id="results"></div>
-</div>
-
-<script>
-function getCurrentEventType() {
-    const checkedRadio = document.querySelector('input[name="eventType"]:checked');
-    return checkedRadio ? checkedRadio.value : 'wr';
-}
-
-function getCurrentMul() {
-    const checkedRadio = document.querySelector('input[name="m-p"]:checked');
-    return checkedRadio ? checkedRadio.value : 'n';
-}
-
-function encodeName(name) {
-    return btoa(encodeURIComponent(name));
-}
-
-function generateLinks() {
-    const baseUrl = document.getElementById('baseUrl').value.trim();
-    const guestNames = document.getElementById('guestNames').value.trim().split('\n').filter(n => n.trim());
-    const messageTemplate = document.getElementById('messageTemplate').value;
-    const mul = getCurrentMul();
-    const eventType = getCurrentEventType();
-
-    if (!baseUrl) return alert('Please enter your invitation URL');
-    if (guestNames.length === 0) return alert('Please enter at least one guest name');
-
-    const resultsDiv = document.getElementById('results');
-    resultsDiv.innerHTML = '<h2 style="margin-bottom: 20px;">📱 Generated Links & Messages</h2>';
-
-    guestNames.forEach((name, index) => {
-        const trimmedName = name.trim();
-        const encodedName = encodeName(trimmedName);
-        const personalUrl = `${baseUrl}?gid=${encodedName}&ev=${eventType}&m=${mul}`;
-        const message = messageTemplate.replace(/{NAME}/g, trimmedName).replace(/{URL}/g, personalUrl);
-        const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
-
-        const urlId = `url-display-${index}`;
-        const msgId = `whatsapp-msg-${index}`;
-
-        const resultItem = document.createElement('div');
-        resultItem.className = 'result-item';
-        resultItem.innerHTML = `
-            <h3>${index + 1}. ${trimmedName}</h3>
-            <strong>Personal URL:</strong>
-            <div id="${urlId}" style="background:#f0f0f0;padding:8px;border-radius:5px;word-break:break-all;">${personalUrl}</div>
-            <button class="copy-btn" onclick="copyToClipboard('${urlId}')">Copy URL</button>
-            <strong style="display:block;margin-top:15px;">WhatsApp Message:</strong>
-            <div id="${msgId}" style="background:#dcf8c6;padding:10px;border-radius:8px;white-space:pre-wrap;">${message}</div>
-            <button class="copy-btn" onclick="copyToClipboard('${msgId}')">Copy Message</button>
-            <a href="${whatsappUrl}" target="_blank" style="display:inline-block;margin-left:10px;">
-                <button class="copy-btn" style="background:#25D366;">Send via WhatsApp</button>
-            </a>
-        `;
-        resultsDiv.appendChild(resultItem);
-    });
-    resultsDiv.classList.add('show');
-}
-
-async function generateNameEnglish() {
-    const text = document.getElementById("guestNamesEnglish").value;
-    const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=en&tl=mr&dt=t&q=${encodeURIComponent(text)}`;
-    try {
-        const res = await fetch(url);
-        const data = await res.json();
-        const translated = data[0].map(item => item[0]).join("");
-        document.getElementById("guestNames").value = translated;
-    } catch (err) {
-        console.error(err);
-        document.getElementById("guestNames").value = "Translation failed.";
-    }
-}
-
-function copyToClipboard(id) {
-    navigator.clipboard.writeText(document.getElementById(id).textContent).then(() => {
-        alert('✓ Copied!');
-    }).catch(err => {
-        console.error(err);
-        alert('Failed to copy. Please copy manually.');
-    });
-}
-</script>
+  <iframe src="https://dj-diu.github.io/invitation/assests/images/Dhananjay&Darshana.pdf"></iframe>
 </body>
 </html>
